--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_ENV=production-or-other
 POSTGRESQL_HOST=127.0.0.1
 POSTGRESQL_PORT=5432
-POSTGRESQL_DB=dbname
+POSTGRESQL_DB=docker
 POSTGRESQL_USER=postgres
 BACKUP_DIR=/var/lib/postgresql/backups/
 INTEGRAM_WEBHOOK_URI=https://integram.org/webhook/cdgdw68sIpR
