--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=production-or-other
-POSTGRESQL_HOST=127.0.0.1
+POSTGRESQL_HOST=
 POSTGRESQL_PORT=5432
 POSTGRESQL_DB=docker
 POSTGRESQL_USER=postgres
