added backups daily,weekly,monthly

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,6 @@ POSTGRESQL_USER=postgres
 BACKUP_DIR=/var/lib/postgresql/backups/
 INTEGRAM_WEBHOOK_URI=https://integram.org/webhook/cdgdw68sIpR
 SENTRY_DSN=your-dsn
-ROTATED_TIME_IN_HOURS=168
+ROTATED_TIME_DAILY=7
+ROTATED_TIME_WEEKLY=4
+ROTATED_TIME_MONTHLY=12
