Added support for PGPASSWORD if needed. More Sentry coverage.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_ENV=production-or-other
-POSTGRESQL_HOST=
+POSTGRESQL_HOST=127.0.0.1
 POSTGRESQL_PORT=5432
 POSTGRESQL_DB=docker
-POSTGRESQL_USER=postgres
+POSTGRESQL_USER=docker
+POSTGRESQL_PASSWORD=docker
 BACKUP_DIR=/var/lib/postgresql/backups/
 INTEGRAM_WEBHOOK_URI=https://integram.org/webhook/cdgdw68sIpR
 SENTRY_DSN=your-dsn
