--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,3 +36,14 @@ jobs:
             .env.example
             postgresql_backup_linux_amd64
             postgresql_backup_linux_arm64
+      
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: false
+          title: "Development Build"
+          files: |
+            .env.example
+            postgresql_backup_linux_amd64
+            postgresql_backup_linux_arm64
